[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-inbox-triage"
version = "0.1.0"
description = "A real-world OpenEnv customer support triage environment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "openai>=2.7.2,<3.0",
  "openenv-core>=0.2.0",
  "pydantic>=2.7,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["support_triage_env*", "server*"]
